[v7.0] ListCollections has inconsistent behavior for commit pending namespaces (7.0 only)

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.21
    • Affects Version/s: 7.0.6
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2024-07-22
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-82221 modified listCollections to allow it to return collections that are commit pending. This was backported to v7.0. However, a few days after this was backported, SERVER-75497 was also backported to 7.0 which overwrote some of the changes from SERVER-82221.

      This partial revert of SERVER-82221 has left us in a state where we are using establishConsistentCollection when a collection name is supplied as a filter to listCollections but not otherwise. This means that listCollections will return collections that are commit pending in some cases but will skip them in others.

       

            Assignee:
            Allison Easton
            Reporter:
            Allison Easton
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: