SERVER-92273 ListCollections without filter should include commit pending namespaces (7.0 only) (#24588)

GitOrigin-RevId: 68ef99b6de33f36759b08114895bd6a78e07311f